test/types/records/recursive/concrete-simple.good
concrete-simple.chpl:3: error: record 'R' cannot contain a recursive field 'x' of type 'R'
