test/types/records/recursive/concrete-simple.chpl

record R {
  var x : R;
}

var r = new R();
